[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/SpaceMono30.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/GUI.gd" type="Script" id=2]
[ext_resource path="res://Font/SpaceMono-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprits/button/IS_MainButton_Hover.png" type="Texture" id=4]
[ext_resource path="res://Sprits/button/IS_ContinueButton_Hover.png" type="Texture" id=5]
[ext_resource path="res://Sprits/button/IS_ContinueButton_Normal.png" type="Texture" id=6]
[ext_resource path="res://Sprits/button/IS_MainButton_Normal.png" type="Texture" id=7]
[ext_resource path="res://Sprits/button/IS_ContinueButton_Pressed.png" type="Texture" id=8]
[ext_resource path="res://Sprits/button/IS_MainButton_Pressed.png" type="Texture" id=9]
[ext_resource path="res://UI/timerGUi.gd" type="Script" id=10]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 1870.0
margin_bottom = 1030.0
mouse_filter = 2

[node name="TopRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_right = 1820.0
margin_bottom = 93.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Rows/TopRow"]
margin_right = 861.0
margin_bottom = 93.0
size_flags_horizontal = 3

[node name="Missions" type="Label" parent="MarginContainer/Rows/TopRow/HBoxContainer"]
margin_right = 126.0
margin_bottom = 93.0
custom_fonts/font = ExtResource( 1 )
text = "Mission
"
align = 2

[node name="KAEmission2" type="HBoxContainer" parent="MarginContainer/Rows/TopRow"]
margin_left = 865.0
margin_right = 1726.0
margin_bottom = 93.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 2

[node name="Discription" type="Label" parent="MarginContainer/Rows/TopRow/KAEmission2"]
margin_left = 489.0
margin_right = 741.0
margin_bottom = 93.0
custom_fonts/font = ExtResource( 1 )
text = "Enemy remain: 
"

[node name="remain" type="Label" parent="MarginContainer/Rows/TopRow/KAEmission2"]
margin_left = 745.0
margin_right = 763.0
margin_bottom = 93.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 1 )
text = "0
"

[node name="Label2" type="Label" parent="MarginContainer/Rows/TopRow/KAEmission2"]
margin_left = 767.0
margin_right = 821.0
margin_bottom = 93.0
custom_fonts/font = ExtResource( 1 )
text = " / 
"

[node name="Label3" type="Label" parent="MarginContainer/Rows/TopRow/KAEmission2"]
margin_left = 825.0
margin_right = 861.0
margin_bottom = 93.0
custom_fonts/font = ExtResource( 1 )
text = "10
"

[node name="timerGUi" type="Label" parent="MarginContainer/Rows/TopRow"]
margin_left = 1730.0
margin_top = 24.0
margin_right = 1820.0
margin_bottom = 69.0
custom_fonts/font = ExtResource( 1 )
text = "Timer"
script = ExtResource( 10 )

[node name="MiddleRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 97.0
margin_right = 1820.0
margin_bottom = 916.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="InGameMenuBG" type="ColorRect" parent="MarginContainer/Rows/MiddleRow"]
margin_right = 1820.0
margin_bottom = 819.0
mouse_filter = 2
size_flags_horizontal = 3
color = Color( 0.188235, 0.145098, 0.145098, 1 )

[node name="containuButton" type="TextureButton" parent="MarginContainer/Rows/MiddleRow/InGameMenuBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -180.5
margin_right = 174.0
margin_bottom = 19.5
mouse_filter = 1
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 5 )
expand = true

[node name="BackButton" type="TextureButton" parent="MarginContainer/Rows/MiddleRow/InGameMenuBG"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = 27.5
margin_right = 118.0
margin_bottom = 135.5
mouse_filter = 1
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 4 )
expand = true

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 920.0
margin_right = 1820.0
margin_bottom = 980.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="HealthSection" type="CenterContainer" parent="MarginContainer/Rows/BottomRow"]
margin_right = 200.0
margin_bottom = 60.0
mouse_filter = 2

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/Rows/BottomRow/HealthSection"]
margin_top = 15.0
margin_right = 200.0
margin_bottom = 45.0
rect_min_size = Vector2( 200, 30 )
mouse_filter = 2
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="HealthTween" type="Tween" parent="MarginContainer/Rows/BottomRow/HealthSection"]

[node name="AmmoSection" type="HBoxContainer" parent="MarginContainer/Rows/BottomRow"]
margin_left = 204.0
margin_right = 1820.0
margin_bottom = 60.0
mouse_filter = 2
size_flags_horizontal = 3
alignment = 2

[node name="CurrentAmmo" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
margin_left = 1464.0
margin_top = 7.0
margin_right = 1500.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "30"

[node name="AmmoSeparato" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
margin_left = 1504.0
margin_right = 1576.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 4 )
text = " / "

[node name="MaxAmmo" type="Label" parent="MarginContainer/Rows/BottomRow/AmmoSection"]
margin_left = 1580.0
margin_top = 7.0
margin_right = 1616.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 1 )
text = "30"

[connection signal="pressed" from="MarginContainer/Rows/MiddleRow/InGameMenuBG/containuButton" to="." method="_on_containuButton_pressed"]
[connection signal="pressed" from="MarginContainer/Rows/MiddleRow/InGameMenuBG/BackButton" to="." method="_on_BackButton_pressed"]
